[package]
name = "anyrouter-worker"
version = "0.1.0"
edition = "2021"
authors = ["Me0wo <public@me0wo.cc>"]

[lib]
crate-type = ["cdylib"]
path = "src/proxy.rs"

[dependencies]
worker = { version = "0.7.4" }
worker-macros = { version = "0.7.4" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
